classDiagram
    class Profesor {
        +uuid id
        +string nombre_completo
        +string email
        +string departamento
    }

    class Estudiante {
        +uuid id
        +string nombre_completo
        +string email
    }

    class Curso {
        +uuid id
        +string profesor_asignado
        +string nombre
        +int creditos
    }

    Profesor "1" --> "0..*" Curso : imparte
    Estudiante "0..*" --> "0..*" Curso : matricula